fix background image not showing

--- a/stye.css
+++ b/stye.css
@@ -35,7 +35,7 @@ p {
 /* First image (Logo. Full height) */
 
 .bgimg-1 {
-    background-image: url("images/parallax1.png");
+    background-image: url("/images/parallax1.png");
     min-height: 100%;
 }
 
